hphp/hack/test/typecheck/generic_subtyping2.php.like_types.exp
File "generic_subtyping2.php", line 25, characters 7-8:
Invalid argument (Typing[4110])
File "generic_subtyping2.php", line 17, characters 22-22:
Expected ~[unresolved] because it is an unenforceable type
File "generic_subtyping2.php", line 23, characters 14-27:
But got UnrelatedClass
